Fixed bug with add icon not showing up when the prop is defined

--- a/src/components/partials/HeaderPartial.scss
+++ b/src/components/partials/HeaderPartial.scss
@@ -26,7 +26,6 @@
             padding: 10px 20px;
 
             &--add {
-                visibility: hidden;
             }
         }
 
